--- a/src/app/pages/cars-list/cars-list.page.html
+++ b/src/app/pages/cars-list/cars-list.page.html
@@ -6,11 +6,11 @@
 
 <ion-content>
   <ion-list>
-    <ion-card *ngFor="let car of carsList">
+    <ion-card *ngFor="let car of carsList" [routerLink]="[car.plateNumber]">
+      <img [alt]="'{{ car.make }} {{ car.model }}'" [src]="car.photo" />
       <ion-card-header>
-        <ion-card-title>
-          {{ car.make }} - {{ car.model }}
-        </ion-card-title>
+        <ion-card-title>{{ car.make }} {{ car.model }}</ion-card-title>
+        <ion-card-subtitle>Rs. {{ car.dailyRate }} per day</ion-card-subtitle>
       </ion-card-header>
     </ion-card>
   </ion-list>
