Lecture 10: nested routes, services, details UI

--- a/src/app/pages/book/book.page.html
+++ b/src/app/pages/book/book.page.html
@@ -1,13 +1,9 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>book</ion-title>
+    <ion-title>Book car</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">book</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-button (click)="confirm()">Confirm booking</ion-button>
 </ion-content>
