--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,13 +1,38 @@
 <h3>{{ user?.firstName }} {{ user?.lastName }}</h3>
 <div>
-  <ion-icon name="call-outline" class="ion-margin-end"></ion-icon>
-  <ion-label>{{ user?.phoneNumber }}</ion-label>
+  <ion-item-sliding>
+    <ion-item>
+      <ion-icon name="call-outline" class="ion-margin-end"></ion-icon>
+      <ion-label>{{ user?.phoneNumber }}</ion-label>
+    </ion-item>
+
+    <ion-item-options>
+      <ion-item-option (click)="call()" color="success">Call</ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+
+  <ion-item-sliding>
+    <ion-item>
+      <ion-icon name="mail-outline" class="ion-margin-end"></ion-icon>
+      <ion-label>{{ user?.email }}</ion-label>
+    </ion-item>
+
+    <ion-item-options>
+      <ion-item-option>Email</ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+
+  <ion-item-sliding>
+    <ion-item>
+      <ion-icon name="location-outline" class="ion-margin-end"></ion-icon>
+      <ion-label>{{ user?.address }}</ion-label>
+    </ion-item>
+
+    <ion-item-options>
+      <ion-item-option (click)="locationButtonClicked()" color="warning">Go to maps</ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
 </div>
 <div>
-  <ion-icon name="mail-outline" class="ion-margin-end"></ion-icon>
-  <ion-label>{{ user?.email }}</ion-label>
-</div>
-<div>
-  <ion-icon name="location-outline" class="ion-margin-end"></ion-icon>
-  <ion-label>{{ user?.address }}</ion-label>
+  
 </div>
