--- a/src/app/pages/book/book.page.html
+++ b/src/app/pages/book/book.page.html
@@ -23,7 +23,18 @@
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="bookingForm">
-        <ion-input placeholder="Location" formControlName="pickupLocation"></ion-input>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="10">
+              <ion-input placeholder="Location" formControlName="pickupLocation"></ion-input>
+            </ion-col>
+            <ion-col size="2">
+              <ion-button fill="clear" (click)="setCurrentLocation('pickupLocation')">
+                <ion-icon slot="icon-only" name="locate-outline"></ion-icon>
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
         <div *ngIf="bookingForm?.get('pickupLocation')?.touched && bookingForm?.get('pickupLocation')?.invalid">
           <ion-label color="danger">Location is required.</ion-label>
         </div>
